--- a/assets/sass/main.css
+++ b/assets/sass/main.css
@@ -23,7 +23,36 @@ body::-webkit-scrollbar-thumb {
 body::-webkit-scrollbar {
     width: 0px;
 }
-
+.bubbleWrapper {
+  padding: 10px 10px;
+  display: flex;
+  justify-content: flex-end;
+  flex-direction: column;
+  align-self: flex-end;
+}
+.inlineContainer {
+  display: inline-flex;
+}
+.other {
+  align-self: flex-start;
+  text-align: left;
+}
+.otherBubble {
+  min-width: 60px;
+  max-width: 700px;
+  padding: 14px 18px;
+  margin: 6px 8px;
+  background-color: #C4A676;
+  border-radius: 0 16px 16px 16px;
+  border: 0px;
+}
+.inlineIcon {
+  width: 20px;
+  object-fit: contain;
+}
+.d-none{
+    display: none;
+}
 .save-dat-content {
     padding: 55px 0px;
 }
