perbaiki fitur musik 5

--- a/assets/sass/main.css
+++ b/assets/sass/main.css
@@ -1334,9 +1334,9 @@ footer p span {
 /* End */
 
 /* musik wraper */
-    .musik-wraper {
+    /* .musik-wraper {
         display: none;
-    }
+    } */
 /* end */
 
 /* musik player */
