--- a/assets/sass/main.css
+++ b/assets/sass/main.css
@@ -23,6 +23,10 @@ body::-webkit-scrollbar-thumb {
 body::-webkit-scrollbar {
     width: 0px;
 }
+.bg-blur{
+    filter: blur(8px);
+    -webkit-filter: blur(8px);
+}
 .bubbleWrapper {
   padding: 10px 10px;
   display: flex;
@@ -1334,9 +1338,10 @@ footer p span {
 /* End */
 
 /* musik wraper */
-    /* .musik-wraper {
+    .musik-wraper {
         display: none;
-    } */
+        
+    }
 /* end */
 
 /* musik player */
